[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/icons/pineapple.png" type="Texture" id=1]
[ext_resource path="res://weapon/pineapple.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.9897

[sub_resource type="Animation" id=2]
resource_name = "throw"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.987342, 0.494318 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 130.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 0.5
scale_curve = SubResource( 4 )

[node name="pineapple" type="Area2D" groups=[
"weapon",
]]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "throw"
anims/throw = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
emitting = false
lifetime = 0.5
explosiveness = 0.5
process_material = SubResource( 5 )
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_pineapple_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_pineapple_body_entered"]
